commit translated contents

--- a/articles/active-directory/index.yml
+++ b/articles/active-directory/index.yml
@@ -11,13 +11,13 @@ metadata:
   author: mtillman
   ms.author: mtillman
   manager: daveba
-  ms.date: 10/22/2020
-  ms.openlocfilehash: 741fe2c9cb2c4992b8c7b7b1905962b37b527917
-  ms.sourcegitcommit: d22a86a1329be8fd1913ce4d1bfbd2a125b2bcae
+  ms.date: 12/01/2020
+  ms.openlocfilehash: 5261d535170feb5c0aaac3731cd27e0af7847cfa
+  ms.sourcegitcommit: d60976768dec91724d94430fb6fc9498fdc1db37
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/26/2020
-  ms.locfileid: "96180612"
+  ms.lasthandoff: 12/02/2020
+  ms.locfileid: "96498049"
 highlightedContent:
   items:
   - title: Azure AD とは
@@ -35,9 +35,9 @@ highlightedContent:
   - title: Azure AD デプロイ チェックリスト
     itemType: concept
     url: ./fundamentals/active-directory-deployment-checklist-p2.md
-  - title: テナントにサブスクリプションを追加する
-    itemType: how-to-guide
-    url: ./fundamentals/active-directory-how-subscriptions-associated-directory.md
+  - title: Azure AD を使用して ID およびアクセス管理の回復性を強化する
+    itemType: overview
+    url: ./fundamentals/resilience-overview.md
 conceptualContent:
   items:
   - title: アプリケーション管理
@@ -267,9 +267,9 @@ conceptualContent:
   - title: ロール
     links:
     - url: ./roles/groups-assign-role.md
-      itemType: how-to-guide
-      text: クラウド グループにロールを割り当てる
-    - url: ./roles/custom-create.md
+      itemType: concept
+      text: Azure AD ロールについて
+    - url: ./roles/concept-understand-roles.md
       itemType: how-to-guide
       text: カスタム ロールを作成する
     - url: ./roles/groups-view-assignments.md
