--- a/articles/active-directory/roles/index.yml
+++ b/articles/active-directory/roles/index.yml
@@ -12,23 +12,23 @@ metadata:
   ms.date: 10/19/2020
   author: curtand
   ms.author: curtand
-  ms.openlocfilehash: 16a64fd66ab391436f991b5f92f306f7ecf2eb58
-  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
+  ms.openlocfilehash: 8dd6ac6fef0dbc84c77ccacfd048b2af21771f6a
+  ms.sourcegitcommit: d60976768dec91724d94430fb6fc9498fdc1db37
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/22/2020
-  ms.locfileid: "92372767"
+  ms.lasthandoff: 12/02/2020
+  ms.locfileid: "96499205"
 landingContent:
 - title: Azure AD ロールについて
   linkLists:
   - linkListType: overview
     links:
-    - text: カスタム ロールの概要
+    - text: Azure AD ロールベースのアクセス制御の概要
       url: custom-overview.md
   - linkListType: concept
     links:
-    - text: 管理の委任
-      url: concept-delegation.md
+    - text: Azure AD ロールについて
+      url: concept-understand-roles.md
     - text: Azure AD の管理単位について
       url: administrative-units.md
     - text: クラウド グループを使用してロールの割り当てを管理する
