--- a/articles/cognitive-services/Computer-vision/index.yml
+++ b/articles/cognitive-services/Computer-vision/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/22/2020
-  ms.openlocfilehash: a2db6db862a3e5f34215e140b917ef851504c332
-  ms.sourcegitcommit: 10d00006fec1f4b69289ce18fdd0452c3458eca5
+  ms.openlocfilehash: 8a1710a44ebd93db352dbc63bd350aad8bfa2785
+  ms.sourcegitcommit: 5b93010b69895f146b5afd637a42f17d780c165b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/21/2020
-  ms.locfileid: "95013601"
+  ms.lasthandoff: 12/02/2020
+  ms.locfileid: "96533895"
 landingContent:
 - title: Computer Vision について
   linkLists:
@@ -50,6 +50,8 @@ landingContent:
       url: quickstarts-sdk/client-library.md?pivots=programming-language-javascript
     - text: Go SDK の使用
       url: quickstarts-sdk/client-library.md?pivots=programming-language-go
+    - text: REST API の使用
+      url: quickstarts-sdk/client-library.md?pivots=programming-language-rest-api
 - title: 画像内のオブジェクトを検出する
   linkLists:
   - linkListType: concept
@@ -68,6 +70,8 @@ landingContent:
       url: quickstarts-sdk/client-library.md?pivots=programming-language-javascript
     - text: Go SDK の使用
       url: quickstarts-sdk/client-library.md?pivots=programming-language-go
+    - text: REST API の使用
+      url: quickstarts-sdk/client-library.md?pivots=programming-language-rest-api
 - title: コンテンツ タグを画像に適用する
   linkLists:
   - linkListType: concept
@@ -86,6 +90,8 @@ landingContent:
       url: quickstarts-sdk/client-library.md?pivots=programming-language-javascript
     - text: Go SDK の使用
       url: quickstarts-sdk/client-library.md?pivots=programming-language-go
+    - text: REST API の使用
+      url: quickstarts-sdk/client-library.md?pivots=programming-language-rest-api
 - title: 読み取りコンテナーの使用
   linkLists:
   - linkListType: get-started
