--- a/articles/data-lake-analytics/index.yml
+++ b/articles/data-lake-analytics/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: hrasheed-msft
   ms.author: hrasheed
   ms.date: 09/13/2019
-  ms.openlocfilehash: 24f8293f7c7f60dd143a2ee0920c63d640cb97b6
-  ms.sourcegitcommit: 8d8deb9a406165de5050522681b782fb2917762d
+  ms.openlocfilehash: 014dbc3b2337238604cfd585ee1d39c4e8dab85b
+  ms.sourcegitcommit: df66dff4e34a0b7780cba503bb141d6b72335a96
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/20/2020
-  ms.locfileid: "92217628"
+  ms.lasthandoff: 12/02/2020
+  ms.locfileid: "96511374"
 landingContent:
 - title: Data Lake Analytics について
   linkLists:
@@ -40,7 +40,7 @@ landingContent:
     - text: U-SQL を使ってみる
       url: data-lake-analytics-u-sql-get-started.md
     - text: U-SQL 言語のリファレンス
-      url: /u-sql/
+      url: https://docs.microsoft.com/u-sql
     - text: U-SQL カタログの概要
       url: data-lake-analytics-u-sql-catalog.md
     - text: ユーザー定義演算子を使用する
