--- a/articles/data-share/index.yml
+++ b/articles/data-share/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: hrasheed-msft
   ms.author: hrasheed
   ms.date: 10/20/2020
-  ms.openlocfilehash: 893386d441c8e1b5d247231c57c53f8ea90a7b19
-  ms.sourcegitcommit: 9eda79ea41c60d58a4ceab63d424d6866b38b82d
+  ms.openlocfilehash: 9fd78623be3802ae0e59f00e9621d16765311607
+  ms.sourcegitcommit: 6a350f39e2f04500ecb7235f5d88682eb4910ae8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/30/2020
-  ms.locfileid: "96350808"
+  ms.lasthandoff: 12/01/2020
+  ms.locfileid: "96454991"
 landingContent:
 - title: Azure Data Share について
   linkLists:
@@ -46,7 +46,7 @@ landingContent:
     links:
     - text: Azure Storage からの共有
       url: how-to-share-from-storage.md
-    - text: Azure SQL Database または Synapse Analytics からの共有
+    - text: Azure SQL Database または Azure Synapse Analytics からの共有
       url: how-to-share-from-sql.md
     - text: Azure Data Explorer からの共有
       url: /azure/data-explorer/data-share
