--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -9,7 +9,7 @@
           href: azure-stack-edge-gpu-overview.md
     - name: クイックスタート
       items:
-        - name: 作業開始
+        - name: はじめに
           href: azure-stack-edge-gpu-quickstart.md
     - name: チュートリアル
       items:
@@ -49,7 +49,105 @@
               href: azure-stack-edge-gpu-technical-specifications-compliance.md
             - name: 電源コードの仕様
               href: azure-stack-edge-technical-specifications-power-cords-regional.md
-        - name: Kubernetes (プレビュー) について
+- name: Azure Stack Edge Pro R
+  items:
+    - name: 概要
+      items:
+        - name: Azure Stack Edge Pro R とは
+          href: azure-stack-edge-j-series-overview.md
+    - name: 概念
+      items:
+        - name: 安全性の準備完了
+          href: azure-stack-edge-pro-r-safety.md
+        - name: 要件を確認する
+          href: azure-stack-edge-pro-r-system-requirements.md
+        - name: 制限を理解する
+          href: azure-stack-edge-pro-r-limits.md
+        - name: セキュリティの概要
+          href: azure-stack-edge-pro-r-security.md
+        - name: 仕様の確認
+          href: azure-stack-edge-pro-r-technical-specifications-compliance.md
+    - name: チュートリアル
+      items:
+        - name: 0 - チェックリストの取得
+          href: azure-stack-edge-pro-r-deploy-checklist.md
+        - name: 1 - 注文、準備
+          href: azure-stack-edge-pro-r-deploy-prep.md
+        - name: 2 - インストール
+          href: azure-stack-edge-pro-r-deploy-install.md
+        - name: 3 - 接続
+          href: azure-stack-edge-pro-r-deploy-connect.md
+        - name: 4 - ネットワークの構成
+          href: azure-stack-edge-pro-r-deploy-configure-network-compute-web-proxy.md
+        - name: 5 - デバイスの構成
+          href: azure-stack-edge-pro-r-deploy-set-up-device-update-time.md
+        - name: 6 - セキュリティの構成
+          href: azure-stack-edge-pro-r-deploy-configure-certificates-vpn-encryption.md
+        - name: 7 - アクティブ化
+          href: azure-stack-edge-pro-r-deploy-activate.md
+        - name: 8 - コンピューティングの構成
+          href: azure-stack-edge-gpu-deploy-configure-compute.md
+    - name: 方法
+      items:
+        - name: VPN を構成する (プレビュー)
+          items:
+            - name: Azure PowerShell 経由で構成する
+              href: azure-stack-edge-mini-r-configure-vpn-powershell.md
+            - name: BCDR 用に構成する
+              href: azure-stack-edge-pro-r-configure-vpn-bcdr.md
+- name: Azure Stack Edge Mini R
+  items:
+    - name: 概要
+      items:
+        - name: Azure Stack Edge Mini R とは
+          href: azure-stack-edge-k-series-overview.md
+    - name: 概念
+      items:
+        - name: 安全性の準備完了
+          href: azure-stack-edge-mini-r-safety.md
+        - name: 要件を確認する
+          href: azure-stack-edge-mini-r-system-requirements.md
+        - name: 制限を理解する
+          href: azure-stack-edge-mini-r-limits.md
+        - name: セキュリティの概要
+          href: azure-stack-edge-pro-r-security.md
+        - name: 仕様の確認
+          href: azure-stack-edge-mini-r-technical-specifications-compliance.md
+    - name: チュートリアル
+      items:
+        - name: 0 - チェックリストの取得
+          href: azure-stack-edge-mini-r-deploy-checklist.md
+        - name: 1 - 注文、準備
+          href: azure-stack-edge-mini-r-deploy-prep.md
+        - name: 2 - インストール
+          href: azure-stack-edge-mini-r-deploy-install.md
+        - name: 3 - 接続
+          href: azure-stack-edge-mini-r-deploy-connect.md
+        - name: 4 - ネットワークの構成
+          href: azure-stack-edge-mini-r-deploy-configure-network-compute-web-proxy.md
+        - name: 5 - デバイスの構成
+          href: azure-stack-edge-mini-r-deploy-set-up-device-update-time.md
+        - name: 6 - セキュリティの構成
+          href: azure-stack-edge-mini-r-deploy-configure-certificates-vpn-encryption.md
+        - name: 7 - アクティブ化
+          href: azure-stack-edge-mini-r-deploy-activate.md
+        - name: 8 - コンピューティングの構成
+          href: azure-stack-edge-gpu-deploy-configure-compute.md
+    - name: 方法
+      items:
+        - name: VPN を構成する (プレビュー)
+          items:
+            - name: Azure PowerShell 経由で構成する
+              href: azure-stack-edge-mini-r-configure-vpn-powershell.md
+            - name: BCDR 用に構成する
+              href: azure-stack-edge-pro-r-configure-vpn-bcdr.md
+        - name: Wi-Fi を管理する
+          href: azure-stack-edge-mini-r-manage-wifi.md
+- name: 共有 Pro GPU、Pro R、Mini R
+  items:
+    - name: 共有の概念
+      items:
+        - name: Kubernetes を理解する
           items:
             - name: Kubernetes とは
               href: azure-stack-edge-gpu-kubernetes-overview.md
@@ -63,7 +161,9 @@
               href: azure-stack-edge-gpu-kubernetes-workload-management.md
         - name: Key Vault 統合の表示
           href: azure-stack-edge-gpu-activation-key-vault.md
-    - name: 方法
+        - name: プロアクティブ ログ記録を有効にする
+          href: azure-stack-edge-gpu-proactive-log-collection.md
+    - name: 共有の利用方法
       items:
         - name: IoT Edge サンプルをデプロイする
           items:
@@ -73,12 +173,14 @@
               href: azure-stack-edge-gpu-deploy-sample-module.md
             - name: Marketplace 経由の GPU モジュール
               href: azure-stack-edge-gpu-deploy-sample-module-marketplace.md
-        - name: Kubernetes ワークロード (プレビュー) をデプロイする
+        - name: Kubernetes ワークロードをデプロイする
           items:
             - name: kubectl を使用
               items:
                 - name: Kubernetes クラスターへのアクセス
                   href: azure-stack-edge-gpu-create-kubernetes-cluster.md
+                - name: コンピューティング アクセラレーション
+                  href: azure-stack-edge-gpu-deploy-compute-acceleration.md
                 - name: ステートレス アプリ
                   href: azure-stack-edge-j-series-deploy-stateless-application-kubernetes.md
                 - name: 静的にプロビジョニングされたステートフル アプリ
@@ -107,6 +209,8 @@
               href: azure-stack-edge-j-series-configure-tls-settings.md
         - name: VM をデプロイする (プレビュー)
           items:
+            - name: VM をデプロイする - Azure portal
+              href: azure-stack-edge-gpu-deploy-virtual-machine-portal.md
             - name: VM をデプロイする - テンプレート
               href: azure-stack-edge-gpu-deploy-virtual-machine-templates.md
             - name: VM をデプロイする - Azure PowerShell コマンドレット
@@ -129,6 +233,8 @@
               href: azure-stack-edge-j-series-certificate-troubleshooting.md
         - name: Edge コンピューティングを管理する
           href: azure-stack-edge-j-series-manage-compute.md
+        - name: Edge コンテナー レジストリを管理する
+          href: azure-stack-edge-gpu-edge-container-registry.md
         - name: ストレージ ゲートウェイを管理する
           items:
             - name: 共有の追加、接続
@@ -165,6 +271,8 @@
               href: azure-stack-edge-monitor.md
             - name: Kubernetes ダッシュボードの使用
               href: azure-stack-edge-gpu-monitor-kubernetes-dashboard.md
+            - name: Azure Monitor の使用
+              href: azure-stack-edge-gpu-enable-azure-monitor.md
         - name: トラブルシューティング
           items:
             - name: デバイスの問題
@@ -175,13 +283,15 @@
               href: azure-stack-edge-gpu-troubleshoot-activation.md
             - name: Microsoft サポートに問い合わせる
               href: azure-stack-edge-contact-microsoft-support.md
-    - name: リリース ノート
+    - name: 共有のリリース ノート
       items:
-        - name: 2009 - GA
+        - name: 2011 - 最新
+          href: azure-stack-edge-gpu-2011-release-notes.md
+        - name: 2010
           href: azure-stack-edge-gpu-2009-release-notes.md
-        - name: 2008 - プレビュー
+        - name: 2008
           href: azure-stack-edge-gpu-2008-release-notes.md
-    - name: リファレンス
+    - name: 共有参照
       items:
         - name: API、SDK、PowerShell を介した IoT Edge ロール
           href: azure-stack-edge-gpu-iot-edge-api-update.md
@@ -279,18 +389,6 @@
           href: /rest/api/databoxedgegateway
         - name: .NET SDK
           href: /dotnet/api/overview/azure/databoxedge/databoxgateway?view=azure-dotnet
-- name: Azure Stack Edge Pro R
-  items:
-    - name: 概要
-      items:
-        - name: Azure Stack Edge Pro R とは
-          href: azure-stack-edge-j-series-overview.md
-- name: Azure Stack Edge Mini R
-  items:
-    - name: 概要
-      items:
-        - name: Azure Stack Edge Mini R とは
-          href: azure-stack-edge-k-series-overview.md
 - name: Data Box Gateway
   items:
     - name: 概要
