--- a/articles/security/benchmarks/index.yml
+++ b/articles/security/benchmarks/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 12/23/2019
-  ms.openlocfilehash: ed638f6cd90abefdf5fbeaddf21ddb3a98322c07
-  ms.sourcegitcommit: 17b36b13857f573639d19d2afb6f2aca74ae56c1
+  ms.openlocfilehash: 761fc5e86acd6fa46f1d03f960a3987e540a925a
+  ms.sourcegitcommit: 6a350f39e2f04500ecb7235f5d88682eb4910ae8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/10/2020
-  ms.locfileid: "94409112"
+  ms.lasthandoff: 12/01/2020
+  ms.locfileid: "96461127"
 landingContent:
 - title: Azure セキュリティ ベンチマークについて
   linkLists:
@@ -82,7 +82,7 @@ landingContent:
       url: ../../hdinsight/security-baseline.md
     - text: Stream Analytics のベースライン
       url: ../../stream-analytics/security-baseline.md
-    - text: Synapse Analytics のセキュリティ ベースライン
+    - text: Azure Synapse Analytics のセキュリティ ベースライン
       url: ../../synapse-analytics/security-baseline.md
 - title: Compute のセキュリティ ベースライン
   linkLists:
