--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -9,7 +9,7 @@
 - name: クイックスタート
   expanded: true
   items:
-    - name: AKS クラスターの作成
+    - name: AKS クラスターのデプロイ
       expanded: true
       items:
         - name: Azure CLI の使用
@@ -252,6 +252,8 @@
           href: kubernetes-service-principal.md
         - name: マネージド ID の使用
           href: use-managed-identity.md
+        - name: AAD ポッド ID の使用 (プレビュー)
+          href: use-azure-ad-pod-identity.md
         - name: クラスター構成ファイルへのアクセスの制限
           href: control-kubeconfig-access.md
         - name: ネットワーク ポリシーによるポッドのトラフィックのセキュリティ保護
