--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -111,8 +111,8 @@
     - name: 分析
       href: cdn-log-analysis.md
       items:
-        - name: HTTP 生ログ
-          href: enable-raw-logs.md
+        - name: 監視、メトリック、アクセス ログ
+          href: monitoring-and-access-log.md
         - name: Azure Diagnostics ログ
           href: cdn-azure-diagnostic-logs.md
         - name: Azure CDN from Verizon の分析ツール
