--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -20,11 +20,11 @@
       href: tutorial-track-usage.md
 - name: 概念
   items:
-    - name: クラスルーム ラボの概要
+    - name: ラボの概要
       href: classroom-labs-overview.md
-    - name: クラスルーム ラボの概念
+    - name: ラボの概念
       href: classroom-labs-concepts.md
-    - name: クラスルーム ラボのアーキテクチャの基礎
+    - name: ラボのアーキテクチャの基礎
       href: classroom-labs-fundamentals.md
     - name: 容量制限
       href: capacity-limits.md
@@ -36,7 +36,7 @@
           href: classroom-labs-scenarios.md
         - name: ハッカソンにラボ サービスを使用する
           href: hackathon-labs.md
-        - name: クラスルーム ラボ - クラスの種類
+        - name: ラボ - クラスの種類
           items:
             - name: クラスの種類の概要
               href: class-types.md
@@ -112,9 +112,9 @@
           href: lab-account-owner-support-information.md
         - name: カスタム イメージを Shared Image Gallery にアップロードする
           href: upload-custom-image-shared-image-gallery.md
-    - name: クラスルーム ラボを作成して構成する (教師)
+    - name: ラボを作成して構成する (教師)
       items:
-        - name: クラスルーム ラボを作成して管理する
+        - name: ラボを作成して管理する
           href: how-to-manage-classroom-labs.md
         - name: ダッシュボードを使用する
           href: use-dashboard.md
@@ -150,9 +150,9 @@
           href: lab-creator-support-information.md
         - name: 教師 ビューから学生の VM にアクセスする
           href: instructor-access-virtual-machines.md
-    - name: クラスルーム ラボの VM に接続する (学生)
+    - name: ラボの VM に接続する (学生)
       items:
-        - name: クラスルーム ラボへのアクセス
+        - name: ラボにアクセスする
           href: how-to-use-classroom-lab.md
         - name: Linux VM への接続
           href: how-to-use-remote-desktop-linux-student.md
