--- a/articles/lab-services/index.yml
+++ b/articles/lab-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: spelluru
   ms.author: spelluru
   ms.date: 06/26/2020
-  ms.openlocfilehash: 9101d40182f3321dbe791bd700a26a782f6c697c
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: eb25361af9cac307c44000eaa8ee6ff9cb429b55
+  ms.sourcegitcommit: 5e5a0abe60803704cf8afd407784a1c9469e545f
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "85445119"
+  ms.lasthandoff: 12/01/2020
+  ms.locfileid: "96436744"
 landingContent:
 - title: 概要
   linkLists:
@@ -25,11 +25,11 @@ landingContent:
     links:
     - text: Lab Services と DevTest Labs について
       url: ../devtest-labs/lab-services-overview.md?toc=%2fazure%2fevent-grid%2fclassroom-labs%2ftoc.json
-    - text: クラスルーム ラボについて
+    - text: ラボについて
       url: classroom-labs-overview.md
   - linkListType: concept
     links:
-    - text: クラスルーム ラボの概念
+    - text: ラボの概念
       url: classroom-labs-concepts.md
 - title: ラボ アカウント
   linkLists:
@@ -43,7 +43,7 @@ landingContent:
       url: how-to-manage-lab-accounts.md
     - text: ラボ アカウントを構成する
       url: how-to-configure-lab-accounts.md
-- title: クラスルーム ラボの設定
+- title: ラボを設定する
   linkLists:
   - linkListType: tutorial
     links:
@@ -51,7 +51,7 @@ landingContent:
       url: tutorial-setup-classroom-lab.md
   - linkListType: how-to-guide
     links:
-    - text: クラスルーム ラボを作成して管理する
+    - text: ラボを作成して管理する
       url: how-to-manage-lab-accounts.md
     - text: テンプレートを設定、カスタマイズ、公開する
       url: how-to-create-manage-template.md
@@ -61,7 +61,7 @@ landingContent:
       url: how-to-configure-student-usage.md
     - text: スケジュールの作成と管理
       url: how-to-create-schedules.md
-- title: クラスルーム ラボの使用
+- title: ラボを使用する
   linkLists:
   - linkListType: tutorial
     links:
